[project]
name = "paintlogio-py"
version = "0.3.6"

authors = [
	{ name="Alexeev Bronislav", email="bro.alexeev@inbox.ru" },
]
maintainers = [
	{ name="Alexeev Bronislav", email="bro.alexeev@inbox.ru" },
]

description = "Logging for important Python applications will become more beautiful and functional!"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
	'ruff', 
	'colorama', 
	'executing', 
	'six', 
	'asttokens',
	'Pygments',
	'logging'
]
keywords = ["logging", 'colors', 'paint', 'paintlog', 'log', 'messageprinter', 'msgprinter', 'message_printer', 'message', 'icecream', 'print', 'printer', 'debug']

[project.urls]
Homepage = "https://github.com/alexeev-engineer/paintlog"
Issues = "https://github.com/alexeev-engineer/paintlog/issues"
Repository = "https://github.com/alexeev-engineer/paintlog"
Changelog = "https://github.com/alexeev-engineer/paintlog/main/CHANGELOG.md"

[tool.ruff]
show-fixes = true
lint.select = [
	"E",
	"F",
	"UP",
	"D"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
